# bus_ticket_bot

./: .gitignore  README.md  pyproject.toml
bus_ticket_bot/: exam.py  main.py
bus_ticket_bot/bot/handlers/: base_handler.py  buy_tickets_handler.py  contact_us_handler.py  help_handler.py  open_transaction_handler.py  start_handler.py  state_middleware_handler.py
bus_ticket_bot/bot/panels/admin/: user_panel.py
bus_ticket_bot/bot/utils/: bot_connection.py  cache.py  check_user_access_and_state.py
bus_ticket_bot/config/: settings.py
bus_ticket_bot/data/: database.db
bus_ticket_bot/models/: admins.py  bot_instance.py  db_settings.py  purchased_tickets.py  refound_requests.py  setup_models.py  tickets.py  users.py
bus_ticket_bot/services/: admin_service.py  base_service.py  bot_instance_service.py  purchased_tickets_service.py  refound_requests_service.py  service_result.py  status_codes.py  ticket_service.py  users_service.py
bus_ticket_bot/utils/: logger.py
docs/: 00-overview.md  02-goals-and-non-goals.md  03-user-roles.md  04-system-architecture.md  05-user-flows.md  06-data-model.md  07-business-rules.md  08-technology-stack.md  exersism.sql
docs/en/: 01-problem-statement.md
docs/fa/: 00-overview.md  01-problem-statement.md
