[tool.poetry]
name = "bus-ticket-bot"
version = "0.1.0"
description = "Bus Ticketing Bot (Telegram-Based)"
authors = ["Hossein Naseri <dev.h.naseri@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
